Fixed CSS date/image alignment

--- a/sandbox/gps1.1.css
+++ b/sandbox/gps1.1.css
@@ -26,7 +26,7 @@ nav ul li {
 nav ul li a {
 	color: black;
 	text-decoration: none;
-	text-shadow: 1px 1px 2px white;
+	text-shadow: 0.5px 0.5px 2px #c7c7c7;
 }
 
 nav ul li a:hover {
@@ -42,6 +42,10 @@ nav ul li a:hover {
 	padding: 60px 40px 40px 40px;
 }
 
+.story {
+	clear: both;
+}
+
 .feature {
 	width: 920px;
 	height: 518px;
@@ -50,10 +54,6 @@ nav ul li a:hover {
 }
 .feature img {
 	width: 100%;
-}
-
-.caption {
-	
 }
 
 .names {
@@ -76,7 +76,7 @@ nav ul li a:hover {
 .right-img img {
 	width: 420px;
 	height: 236px;
-	padding: 20px 0 0 20px;
+	padding: 0 0 0 20px;
 }
 
 .right-img p {
